# django-object-safety

./: .gitignore  LICENSE  README.md  boot_django.py  django_shell.py  load_tests.py  makemigrations.py  manage.py  migrate.py  pyproject.toml  runserver.py
.github/workflows/: qodana_code_quality.yml
django_safety/: asgi.py  settings.py  urls.py  wsgi.py
safety/: models.py  object_group.py  perms.py  shortcuts.py  tests.py  utils.py
safety/migrations/: 0001_initial.py  0002_alter_objectpermission_object_ct_and_more.py  0002_alter_objectpermission_unique_together_and_more.py  0003_alter_objectpermission_options.py  0003_alter_permissiongroup_target_id_and_more.py  0004_alter_objectpermission_unique_together_and_more.py  0005_alter_permissiongroup_target_id_and_more.py  0006_alter_objectpermission_options.py  0007_alter_objectpermission_options.py  0008_rename_permissiongroup_objectgroup.py  0009_alter_objectgroup_permissions_and_more.py  0009_fakepost.py  0010_alter_objectgroupuser_options_and_more.py
safety_tests/: apps.py  models.py  tests.py
safety_tests/migrations/: 0001_initial.py  0002_alter_remoteuser_user_id.py  0003_delete_remoteuser.py
service_perms/: apps.py  models.py  utils.py
