[tool.poetry]
name = "django-object-safety"
version = "0.3.0"
description = "Adds object permissions to Django."
license = "MIT"
authors = ["William Ferreira"]
homepage = "https://django-object-safety-docs.readthedocs.io/"
repository = "https://github.com/williammferreira/django-object-safety/"
keywords = ["django", "permissions", "object-permissions", "django-permissions", "django-object-permissions"]
readme = "README.md"
packages = [{ include = "safety" }]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
build = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
